--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ body{
     background: #D4D8DD;
 }
 
+#contoh-soal{
+  background: linear-gradient(
+        134.15deg,
+        rgba(53, 114, 142, 1) 0%,
+        rgba(15, 32, 40, 1) 99.08997416496277%
+    )
+}
+
 .title {
     background: linear-gradient(
     90.92deg,
@@ -82,7 +90,7 @@ background: #000;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
+    max-width: 1000px;
     margin: auto;
   }
   
@@ -113,7 +121,10 @@ background: #000;
   button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background: linear-gradient(
+      134.15deg,
+      rgba(53, 114, 142, 1) 0%,
+      rgba(15, 32, 40, 1) 99.08997416496277%);
     color: white;
     border: none;
     border-radius: 5px;
@@ -122,7 +133,11 @@ background: #000;
   }
   
   button:hover {
-    background-color: #0056b3;
+    background: linear-gradient(
+        134.15deg,
+        rgba(53, 114, 142, 1) 0%,
+        rgba(15, 32, 40, 1) 99.08997416496277%
+    );
   }
   
   /* Styling untuk hasil kalkulator */
